[fix] Report UI 대공사  1. report_wrap 구조 변경   - 서답형 문제 영역이나 정오표 정답 길이에 따라 높이가 변하는 현상 발견   => 특정 높이 정해두고 영역 초과시 스크롤해서 볼 수 있도록 수정
 2. UI 수정
  - 컨셉에 맞는 디자인으로 수정(바다 색감, 물고기 아이콘 등)
  - 나중에 시간 괜찮으면 더 수정할 예정

 [feat] PDF 버튼 추가
 1. html2canvas로 이미지따서 pdf 출력하는 방식으로 구현할 예정
  - window.print()방식으로 해보니 ui 다 깨져서 보임.
  - html2canvas 방식도 마찬가지긴 한데 효율성(이 방식은 창 안나오고 바로 다운로드 받아짐) 측면에서 이 방식으로 하는게 좋을 것 같음
  - css 다 깨지고 출력 안되는 부분 있는데 조금 더 고민해 볼 예정

--- a/src/main/resources/static/css/report/report_basic.css
+++ b/src/main/resources/static/css/report/report_basic.css
@@ -1,12 +1,13 @@
-#wrap{ /*영역 잡기*/
+#basic_wrap{ /*영역 잡기*/
     width: 100%;
-    height: 190vh;
+    height: 180vh;
     background-color: #46B1B7;
     position: relative;
     font-family: omyu_pretty;
+    padding-bottom: 15vh;
 }
 
-#wrap>h1{ /*페이지 타이틀*/
+#basic_wrap>h1{ /*페이지 타이틀*/
     font-family: chab;
     color: white;
     top: 8vh;
@@ -25,7 +26,7 @@
 
 /*배경 커스텀 시작*/
 .top_deco{ /* 위에 물결 장식 */
-    height: 30%;
+    height: 20%;
 }
 
 .bubble_left{ /*왼쪽 거품*/
@@ -43,9 +44,19 @@
         opacity: 1;
     }
     100% {
-        transform: translateY(-185vh);
+        transform: translateY(-180vh);
         opacity: 0;
     }
+}
+
+.coral_reef_item{ /*산호초 좌,우 아이템*/
+    width: 24vw;
+    top: -1vw;
+}
+
+/* 바다 바닥 장식 */
+.bottom_deco{
+    height: 5%;
 }
 
 /*배경 커스텀 끝*/
@@ -55,13 +66,38 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     position: relative;
     top: 12vh;
     z-index: 3;
-    padding: 4vw 6vw 5vw;
+    padding: 1vw 5vw 1vw;
     border-radius: 5vw;
     background: white;
+    height: 150vh;
+    overflow: scroll;
+    overflow-x: hidden;
+    border-top: 3vw solid white;
+    border-bottom: 3vw solid white;
+    border-right: 0.5vw solid white;
+    border-left: 0.5vw solid white;
+}
+
+.report_wrap::-webkit-scrollbar {
+    /* 스크롤바의 너비 */
+    width: 0.5vw;
+}
+.report_wrap::-webkit-scrollbar-thumb {
+    /* 스크롤바의 길이 */
+    height: 30%;
+    /* 스크롤바의 색상 */
+    background: rgba(182,190,237,0.4);
+    border-radius: 1vw;
+}
+
+.report_wrap::-webkit-scrollbar-track {
+    /*스크롤바 뒷 배경 색상*/
+    background: rgba(215,221,247,0.3);
+    border-radius: 5vw;
+    margin: 10vh 0;
 }
 
 .report_wrap ul li {
